data/derived/sp14/progs/unify/prog0932.ml.out
Characters 195-221:
  | 1 -> buildTan(mod_float (build(rand, (depth - 1))) 1.0)
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
